# argus

./: .editorconfig  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCTRINE.md  NOVA.md  README.md  SAGE.md  SECURITY.md  TODO.md  VERA.md  docker-compose.yml  release.toml
.claude/commands/: nova.md  sage.md  vera.md
.claude/handoff/: README.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  secret_scanning.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml  security.yml
ansible/: README.md  ansible.cfg  deploy-argus.yml  netbox_inventory.yml  requirements.yml
ansible/inventory/: hosts.example.yml
ansible/playbooks/: facts.yml
ansible/roles/argus_deploy/: README.md
ansible/roles/argus_deploy/defaults/: main.yml
ansible/roles/argus_deploy/handlers/: main.yml
ansible/roles/argus_deploy/meta/: main.yml
ansible/roles/argus_deploy/tasks/: main.yml
ansible/roles/argus_deploy/templates/: env.j2
deploy/: .env.example  README.md  docker-compose.yml
deploy/cloudflared/terraform/: .gitignore  main.tf  terraform.tfvars.example
deploy/netbox/: Dockerfile  plugins.py
docs/: ARCHITECTURE.md  BRAND.md  ROADMAP.md  VENDOR_PACKS.md
docs/architecture/adr/: 0001-netbox-as-source-of-truth.md  0002-monorepo-python-server-react-web.md  0003-discovery-reconciliation-model.md  0004-netbox-ansible-inventory.md  0005-vendor-packs.md  0006-python-brain-go-actuator.md  0007-multi-tenant-netbox.md  0008-ask-the-brain-mnemosyne.md  0009-vendor-pack-practices-spi.md  0010-management-plane-contract.md  0011-webhook-reactions-read-side-only.md  0012-maintenance-mcp-surface.md  0013-paired-vendor-knowledge-packs.md  0014-unifi-gateway-mgmt-ip-legacy-api.md  README.md
examples/vendor-pack-template/: README.md  pyproject.toml
examples/vendor-pack-template/src/argus_vendor_example/: __init__.py  collector.py  models.py
server/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
server/src/argus/: __init__.py  config.py  confirmations.py  http_server.py  maint_server.py  reactions.py  scheduler.py  server.py  webhooks.py
server/src/argus/devtools/: __init__.py  maint_tools.py  release.py
server/src/argus/discovery/: __init__.py  base.py  practices.py
server/src/argus/discovery/collectors/: __init__.py  dhcp_arp.py  snmp_lldp.py  unifi.py
server/src/argus/discovery/vendors/: __init__.py  pack.py
server/src/argus/discovery/vendors/unifi/: __init__.py  collector.py  models.py  practices.py
server/src/argus/netbox/: __init__.py  client.py
server/src/argus/reconcile/: __init__.py  engine.py
server/src/argus/tools/: __init__.py  discovery_tools.py  practices_tools.py  read_tools.py  reconcile_tools.py
server/tests/: conftest.py  test_config.py  test_devtools_release.py  test_http_server.py  test_maint_server.py  test_maint_tools.py  test_netbox_client.py  test_practices.py  test_reactions.py  test_reconcile.py  test_scheduler.py  test_snmp_collector.py  test_tools.py  test_unifi_collector.py  test_vendor_packs.py  test_webhooks.py
web/: Dockerfile  README.md  nginx.conf  nginx.conf.template  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  format.ts  index.css  ipam.ts  vite-env.d.ts
web/src/api/: client.ts
web/src/components/: AskBrainPanel.tsx  DeviceTable.tsx  DriftPanel.tsx  IpamTree.tsx  TopologyMap.tsx
