[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus"
version = "0.1.0"
description = "NetBox-backed network source-of-truth automation server for MCP coding agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "Jon Freed" }]
dependencies = [
    "mcp>=1.0",
    "pynetbox>=7.3",
    "httpx>=0.28.1",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
# Heavy network-discovery libraries — declared for P1, not used by the scaffold yet.
discovery = [
    "napalm>=5.0",
    "netmiko>=4.3",
    "pysnmp>=6.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.1.0",
    "respx>=0.22",
    "ruff>=0.15.17",
    "mypy>=2.1.0",
]

[project.scripts]
argus-mcp = "argus.server:main"
argus-http = "argus.http_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["argus"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
