[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-netbox"
version = "0.1.7"
description = "NetBox-backed network source-of-truth automation server for MCP coding agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "Jon Freed" }]
keywords = ["netbox", "network-automation", "mcp", "source-of-truth", "ipam", "dcim", "unifi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Networking",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.28.0",
    "pynetbox>=7.3",
    "httpx>=0.28.1",
    "fastapi>=0.137.1",
    "uvicorn>=0.34",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
# Heavy network-discovery libraries — declared for P1, not used by the scaffold yet.
discovery = [
    "napalm>=5.1.0",
    "netmiko>=4.3",
    "pysnmp>=7.1.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.17",
    "mypy>=2.1.0",
]

[project.scripts]
argus-mcp = "argus.server:main"
argus-http = "argus.http_server:main"
argus-release = "argus.devtools.release:main"
argus-maint-mcp = "argus.maint_server:main"

[project.urls]
Homepage = "https://github.com/freed-dev-llc/argus"
Repository = "https://github.com/freed-dev-llc/argus"
Issues = "https://github.com/freed-dev-llc/argus/issues"
Changelog = "https://github.com/freed-dev-llc/argus/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
argus = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["argus"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
