# Template for an out-of-tree Argus vendor pack. Copy this directory, rename
# `argus_vendor_example` to your vendor, implement the collector, and `pip install` it
# alongside Argus — the `argus.vendor_packs` entry point makes it auto-register (ADR-0005).
# Works identically for a public or a private repo.

[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-vendor-example"
version = "0.1.0"
description = "Template Argus vendor pack — copy to build your own (public or private)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["argus-netbox>=0.1.4"]  # the public SPI: Collector, DiscoveryResult, VendorPack

# This is what makes the pack discoverable. The value resolves to a VendorPack instance.
[project.entry-points."argus.vendor_packs"]
example = "argus_vendor_example:EXAMPLE_PACK"

[tool.setuptools.packages.find]
where = ["src"]
